Upgrade to Spring Boot 3.4.2 and Gradle 8.12 * Remove Graal Native Image support and Spotbugs.